kernel/tests/snapshots/runtime_cli_snapshots/normalize_human_gate__approve.snap
---
source: tests/runtime_cli_snapshots.rs
expression: response
---
{
  "fresh": true,
  "output": {
    "choice": "Approve",
    "cycle": 14,
    "kind": "human_gate",
    "request_id": 21,
    "status": "Ok"
  },
  "status": "normalize_human_gate_ok"
}
