kernel/tests/snapshots/runtime_cli_snapshots/normalize_human_gate__feedback.snap
---
source: tests/runtime_cli_snapshots.rs
expression: response
---
{
  "fresh": false,
  "output": {
    "choice": "Feedback",
    "cycle": 15,
    "kind": "human_gate",
    "request_id": 22,
    "status": "Ok"
  },
  "status": "normalize_human_gate_ok"
}
