kernel/tests/snapshots/runtime_cli_snapshots/normalize_human_gate__malformed.snap
---
source: tests/runtime_cli_snapshots.rs
expression: response
---
{
  "fresh": false,
  "output": {
    "choice": "Approve",
    "cycle": 16,
    "kind": "human_gate",
    "request_id": 23,
    "status": "Malformed"
  },
  "status": "normalize_human_gate_ok"
}
